BE/API/EXST: Aggiunta la possibilità di avere PIU GRUPPI DI TRATTAMENTO
