# backend/api/serializers.py
@@ -26,10 +26,11 @@ class ConditionSerializer(serializers.Serializer):
 
 class TriggerSerializer(serializers.Serializer):
     id = serializers.CharField() 
+    target_groups = serializers.ListField(child=serializers.CharField(), required=False, default=list)
     event_source = serializers.CharField()
     logical_operator = serializers.ChoiceField(choices=["AND", "OR"])
     conditions = ConditionSerializer(many=True)
-    apply_interventions = serializers.ListField(child=serializers.CharField())
+    apply_interventions = serializers.JSONField()
 
 class InterventionSerializer(serializers.Serializer):
     id = serializers.CharField() 
